Test/typing/should_fail/methods_native_body.java
package toto;

abstract class A {
    native int myMethod() {
        System.out.println("Coucou");
    }
}